# cognee-kb

./: .dockerignore  .env.business.template  .env.cloud.template  .env.gateway.template  .env.local.template  .env.privat.template  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  kb.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: 2026-06-12-kb-implementierungsplan.md  2026-06-12-kb-phase-2-plan.md  2026-06-13-ideen-beemind.md  2026-06-13-kb-phase-3-mcp-plan.md  2026-06-13-quellen-chip-stufe-1.md  architektur-knowledge-system-cognee.md  cognee-source-lifecycle.md  prd-multi-vault-knowledge-system.md
docs/plans/: 2026-07-11-001-feat-vault-collections-plan.md
eval/: .blind-mapping.txt  antworten-cognee.md  antworten-graphrag.md  blind-vergleich.md  fragen.md  modeltest-deepseek.md  modeltest-gemini.md  modeltest-haiku.md  modeltest-mistral.md  modeltest.py  quellen.txt
kb/: classify.py  cli.py  cognee_io.py  config.py  envutil.py  fetch_pdf.py  fetch_safety.py  fetch_web.py  fetch_youtube.py  gap_analysis.py  gateway.py  guard.py  instance_service.py  logging_setup.py  maintenance.py  mcp_server.py  query_models.py  query_proxy.py  query_service.py  queue.py  rawstore.py  sources.py  synthesis.py  worker.py
ops/: cognee-1.2-migration.md  de.michelyweb.kb.worker-business.plist  de.michelyweb.kb.worker-cloud.plist  de.michelyweb.kb.worker-local.plist  de.michelyweb.kb.worker-privat.plist  install.sh  ios-kurzbefehl.md  mcp-setup.md  rebuild_cognee_store.py
ops/mcp/: business.mcp.json  cloud.mcp.json  local.mcp.json  privat.mcp.json
plans/: 001-verification-baseline.md  002-ghost-source-record.md  003-mcp-snippet-title.md  004-ssrf-guard.md  005-raw-source-confinement.md  006-concurrent-poll.md  007-query-answer-preservation.md  008-proxy-consolidation.md  009-origin-hardening.md  010-ruff-mypy.md  011-config-validation-tests.md  012-deps-audit-gate.md  013-nodeset-autosuggest-race.md  014-revoke-object-url.md  015-env-quote-stripping.md  016-sqlite-conn-close.md  017-stale-claude-md-note.md  018-structured-logging.md  019-health-info-disclosure.md  020-kuzu-concurrency-spike.md  021-direction-reingest-migration.md  022-direction-sources-crud.md  023-direction-spaced-repetition.md  024-direction-source-connectors.md  025-cognee-async-lock.md  026-import-command.md  027-sources-list.md  028-pdf-connector.md  029-gbrain-inspired-knowledge-quality.md  README.md
raw/privat/: 2026-06-12-das-phase-2-gateway-des-kb-systems-nutzt-fastapi-u-2.md  2026-06-12-das-phase-2-gateway-des-kb-systems-nutzt-fastapi-u.md
tests/: test_classify.py  test_cli.py  test_cognee_cloud_gate.py  test_cognee_io.py  test_config.py  test_fetch_pdf.py  test_fetch_safety.py  test_fetch_web.py  test_fetch_youtube.py  test_gap_analysis.py  test_gateway.py  test_guard.py  test_instance_service.py  test_maintenance.py  test_mcp_server.py  test_query_models.py  test_query_proxy.py  test_query_service.py  test_queue.py  test_rawstore.py  test_sanity.py  test_sources.py  test_synthesis.py  test_worker.py
web/: package-lock.json  package.json
web/public/: layout-init.js  manifest.webmanifest  sw.js
web/src/layouts/: Base.astro
web/src/lib/: api.js  bootstrap.js  collections.js  nodesets.js  poll.js  safe.js
web/src/pages/: chat.astro  index.astro  settings.astro  sources.astro
web/test/: nodesets.test.mjs  openBlob.test.mjs  poll.test.mjs  safe.test.mjs  ui-source.test.mjs
web/tests/: api.test.mjs  ui-collections.test.mjs  ui-source.test.mjs
