[project]
name = "kb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cognee==0.3.*",
    # Hart gepinnt: fastembed 0.6 wechselte das Pooling (CLS -> mean) für mpnet.
    # Ein Versionswechsel ändert die Vektoren -> bestehender Index wäre wertlos.
    "fastapi>=0.136.3",
    "fastembed==0.6.0",
    "httpx>=0.28.1",
    "mcp>=1.27",
    "pypdf>=6.13.3",
    "pyyaml>=6.0.3",
    "trafilatura>=2.1.0",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.49.0",
    "youtube-transcript-api>=1.2.4",
]

[project.scripts]
kb = "kb.cli:app"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.uv]
# cognee 0.3.9 erlaubt mistralai>=1.9.10 ohne Obergrenze, aber sein
# instructor-Pin (1.15.x) braucht mistralai<2 — sonst bricht `import cognee`.
constraint-dependencies = ["mistralai<2.0.0"]
# Transitive Deps, die upstream (cognee/fastapi) zu niedrig pinnen, aber CVE-Fixes
# enthalten — hier nach oben erzwingen (kb nutzt sie nicht direkt, s. Audit-Job).
# ACHTUNG: fastapi-users NICHT anheben — cognee 0.3.9 braucht v14 (dort liegt
# SQLAlchemyUserDatabase in fastapi_users.db); v15 bricht `import cognee`.
# CVE-2025-68481 (fastapi-users) ist für kb nicht erreichbar (keine User-Auth,
# nur Bearer-Token) und wird im Audit-Job per --ignore-vuln geduldet.
override-dependencies = ["python-multipart>=0.0.31", "pyjwt>=2.13", "pillow>=12.2"]

[build-system]
requires = ["uv_build>=0.7.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "kb"
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# BLE001 (broad-except) wird gezielt per noqa an den Worker-/Service-Stellen
# erlaubt (Worker darf nie sterben). Konservative Selection, kein Stil-Dogma.
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
# cognee ist lazily importiert und ungetypt; keine Stub-Noise propagieren.
ignore_missing_imports = true
files = ["kb"]
